# selko

./: .env.example  .gitignore  .worktreeinclude  BACKEND_FRAMEWORK_EVALUATION.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  HOSTING_EVALUATION.md  INTEGRATION_TESTS_PLAN.md  LICENSE  PLAN5.md  PLAN_ATTACHMENT_STORAGE.md  PRD_ARCH.md  README.md  RENDER_MIGRATION_PLAN.md  SIMPLIFIED_STACK.md  TODO.md  package-lock.json  pyproject.toml
backend/: pyproject.toml
backend/selko/: __init__.py  config.py  logging.py
backend/selko/api/: __init__.py  __main__.py  app.py  deps.py
backend/selko/api/routes/: __init__.py  attachments.py  calendars.py  emails.py  events.py  health.py  integrations.py  jobs.py  photos.py  sender_rules.py
backend/selko/api/schemas/: __init__.py  attachments.py  calendar.py  common.py  emails.py  events.py  integrations.py
backend/selko/services/: __init__.py  attachments.py  auth.py  calendar_policy.py  calendars.py  circuit_breaker.py  civil_time.py  email_folders.py  email_images.py  emails.py  event_diff.py  event_processing.py  events.py  folder_classification.py  format_conversion.py  gemini.py  gmail.py  google_photos.py  ics_parser.py  integrations.py  jobs.py  llm_gateway.py  llm_logging.py  llm_provider.py  memory_monitor.py  outlook.py  photos.py  quotas.py  retry_utils.py  scheduled_tasks.py  users.py
backend/selko/workers/: __init__.py  calendar_sync.py  email_fetch.py  email_process.py  photo_fetch.py  photo_process.py  pool.py
backend/tests/: __init__.py  conftest.py  test_api_routes.py  test_attachments.py  test_calendar_policy.py  test_calendars.py  test_civil_time.py  test_cleanup_review_incident.py  test_config.py  test_email_fetch.py  test_email_images.py  test_emails.py  test_error_responses.py  test_eval.py  test_eval_identity.py  test_event_diff.py  test_event_processing.py  test_events.py  test_events_refactor.py  test_format_conversion.py  test_gemini.py  test_gmail.py  test_ics_parser.py  test_integrations.py  test_llm_gateway.py  test_llm_gateway_fallback.py  test_llm_provider.py  test_memory_monitor.py  test_outlook.py  test_photos.py  test_propose_event_update.py  test_reliability.py  test_reliable_email_history.py  test_retry_utils.py  test_scheduled_tasks.py  test_security.py  test_sender_rule_migrations.py  test_workers.py
backend/tests/eval/: README.md  REPORT.md  __init__.py  artifact_store.py  conftest.py  eval_config.py  identity.py  run_eval.py
backend/tests/eval/fixtures/attachments/: conference_details.md  event_invite.ics  field_trip_permission.txt  meeting_agenda.txt  training_schedule.csv
backend/tests/eval/fixtures/compare/: conference_day1_vs_day2_15.json  different_doctor_appointments_12.json  different_events_same_day_09.json  different_kids_birthdays_14.json  same_birthday_party_01.json  same_conference_06.json  same_doctor_appointment_02.json  same_flight_04.json  same_location_different_events_11.json  same_parent_teacher_08.json  same_school_play_07.json  same_team_meeting_03.json  same_wedding_05.json  similar_titles_different_dates_10.json  team_meeting_vs_kickoff_13.json
backend/tests/eval/fixtures/emails/appointments/: accountant_meeting_06.json  car_service_03.json  dentist_appointment_02.json  doctor_appointment_01.json  home_repair_08.json  lawyer_consultation_05.json  salon_appointment_04.json  vet_appointment_07.json  winery_reservation_09.json  winery_reservation_reminder_10.json
backend/tests/eval/fixtures/emails/conferences/: conference_with_markdown_details.json  tech_conference_01.json  training_session_04.json  training_with_schedule_csv.json  virtual_summit_05.json  webinar_02.json  workshop_03.json
backend/tests/eval/fixtures/emails/invitations/: baby_shower_04.json  birthday_party_adult_02.json  birthday_party_kids_01.json  dinner_party_09.json  engagement_party_10.json  graduation_party_05.json  holiday_party_07.json  housewarming_06.json  retirement_party_08.json  wedding_03.json  ysc_newsletter_multi_event_11.json
backend/tests/eval/fixtures/emails/meetings/: all_hands_06.json  board_meeting_03.json  client_call_04.json  (+8 more)
backend/tests/eval/fixtures/merge/: allday_gets_time_02.json  cancelled_and_rescheduled_07.json  conference_session_update_12.json  event_cancelled_06.json  event_time_extended_03.json  followup_adds_agenda_08.json  inperson_to_virtual_05.json  meeting_rescheduled_01.json  multiple_fields_change_11.json  reminder_adds_parking_09.json  school_event_detailed_14.json  travel_itinerary_update_15.json  update_adds_dresscode_10.json  vague_to_specific_location_04.json  wedding_full_details_13.json
backend/tests/eval/fixtures/threads/: appointment_reminder_thread.json  event_cancellation_thread.json  event_update_details_thread.json  meeting_reschedule_thread.json
backend/tests/eval/reports/: 2026-07-23-current-model-low-thinking-recommendation.md  REPORT.md
backend/tests/eval/results/: .gitignore
backend/tests/fixtures/emails/: event_birthday_party.json  event_doctor_appointment.json  event_meeting_request.json  event_multiple_events.json  no_event_newsletter.json  no_event_receipt.json
backend/tests/integration/: __init__.py  conftest.py  test_integration_api.py  test_integration_attachments.py  test_integration_auth.py  test_integration_calendars.py  test_integration_cli.py  test_integration_data_api_grants.py  test_integration_e2e.py  test_integration_emails.py  test_integration_event_processing.py  test_integration_events.py  test_integration_gemini.py  test_integration_gmail.py  test_integration_jobs.py  test_integration_oauth.py  test_integration_rls_security.py  test_integration_users.py  test_integration_workers.py  test_llm_logging.py  test_rate_limiting.py
backend/tests/unit/: __init__.py  test_calendar_drift.py  test_civil_time.py  test_quota_service.py  test_timezone.py  test_undo_history_event.py
cli/: __init__.py  cli_auth_gcal.py  cli_auth_gmail.py  cli_auth_outlook.py  cli_calendars.py  cli_dead_letters.py  cli_events.py  cli_extract_events.py  cli_fetch_emails.py  cli_process_emails.py  cli_seed_tokens.py  cli_user.py  pyproject.toml
(+4237 files in other folders)
