[project]
name = "selko-workspace"
version = "0.1.0"
description = "Selko - AI-powered personal organization assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selko",
    "selko-cli",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.uv.sources]
selko = { workspace = true }
selko-cli = { workspace = true }

[tool.uv.workspace]
members = ["backend", "cli"]
