[project]
name = "selko-workspace"
version = "0.1.0"
description = "Selko - AI-powered personal organization assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selko",
    "selko-cli",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.uv.sources]
selko = { workspace = true }
selko-cli = { workspace = true }

[tool.uv.workspace]
members = ["backend", "cli"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
