[project]
name = "selko"
version = "0.1.0"
description = "Selko backend - shared business logic and services"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.2",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "responses>=0.25.0",
    "pytest-timeout>=2.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["selko"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "development: tests that run against local Supabase with real Gmail (requires seeded tokens)",
    "staging: tests that run against staging Supabase + real Gmail",
    "production: read-only smoke tests for production",
    "slow: tests that take >10 seconds",
]
