[project]
name = "selko"
version = "0.1.0"
description = "Selko backend - shared business logic and services"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-genai>=1.0.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.2",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
    "openai>=2.21.0",
    "pillow>=12.1.1",
    "icalendar>=6.0.0",
    "pymupdf>=1.25.0",
    "pillow-heif>=0.21.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.0",
    "responses>=0.25.0",
    "pytest-timeout>=2.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["selko"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "development: tests that run against local Supabase with real Gmail (requires seeded tokens)",
    "staging: tests that run against staging Supabase + real Gmail",
    "production: read-only smoke tests for production",
    "llm: marks tests as requiring real LLM API calls (deselect with '-m \"not llm\"')",
    "slow: tests that take >10 seconds",
]
