[project]
name = "selko"
version = "0.1.0"
description = "Selko backend - shared business logic and services"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.11.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "python-jose[cryptography]>=3.3.0",
    "apscheduler>=3.11.3",
    "slowapi>=0.1.10",
    "openai>=2.45.0",
    "pillow>=12.3.0",
    "icalendar>=7.2.0",
    "pymupdf>=1.28.0",
    "pillow-heif>=1.4.0",
    "anthropic>=0.116.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.0",
    "responses>=0.26.2",
    "pytest-timeout>=2.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["selko"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "development: tests that run against local Supabase with real Gmail (requires seeded tokens)",
    "staging: tests that run against staging Supabase + real Gmail",
    "production: read-only smoke tests for production",
    "llm: marks tests as requiring real LLM API calls (deselect with '-m \"not llm\"')",
    "slow: tests that take >10 seconds",
]
