[project]
name = "selko-cli"
version = "0.1.0"
description = "Selko CLI tools for POC and development"
requires-python = ">=3.10"
dependencies = [
    "selko",
    "typer>=0.26.8",
    "rich>=15.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli_user", "cli_auth_gmail", "cli_fetch_emails", "cli_dead_letters"]

[tool.uv.sources]
selko = { workspace = true }
